Fixed TOTD pt2?

--- a/TOTD.html
+++ b/TOTD.html
@@ -11,7 +11,7 @@
 <!-- Navigation (Stays on Top) -->
 <div class="w3-top w3-bar w3-deep-purple">
   <a href="MAIN.html" class="w3-bar-item w3-button">Home</a>
-  <a href="INTRODUCTION.html" class="w3-bar-item w3-button">Introduction/Purpose</a>
+  <a href="INTRODUCTION.html" class="w3-bar-item w3-button">Purpose</a>
   <a href="TOTD.html" class="w3-bar-item w3-button">Tip of the Day</a>
   <a href="WH.html" class="w3-bar-item w3-button">WellnessHacks</a>
   <a href="AFFIRMATIONS.html" class="w3-bar-item w3-button">Affirmations</a>
