--- a/AFFIRMATIONS.html
+++ b/AFFIRMATIONS.html
@@ -23,9 +23,8 @@
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-card w3-padding w3-wide">Affirmations</span></h5>
     <div class="w3-panel">
-     <script>
+      <p>Enter an affirmation to have displayed in cool font!</p>
        var x = document.createElement("INPUT");
        x.setAttribute("type", "text");
        document.write(x)
-      </script>
     </div>
