Fixed RSS widget.

--- a/TOTD.html
+++ b/TOTD.html
@@ -13,7 +13,7 @@
   <a href="MAIN.html" class="w3-bar-item w3-button">Home</a>
   <a href="INTRODUCTION.html" class="w3-bar-item w3-button">Purpose</a>
   <a href="TOTD.html" class="w3-bar-item w3-button">Tip of the Day</a>
-  <a href="WH.html" class="w3-bar-item w3-button">WellnessHacks</a>
+  <a href="WH.html" class="w3-bar-item w3-button">Wellness Hacks</a>
   <a href="AFFIRMATIONS.html" class="w3-bar-item w3-button">Affirmations</a>
   <a href="RESOURCES.html" class="w3-bar-item w3-button">Resources</a>
   <a href="SOCIALS.html" class="w3-bar-item w3-button">Socials</a>
@@ -26,11 +26,7 @@
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-card w3-padding w3-wide">Tip of the Day!</span></h5>
     <div class="w3-panel">
-
-<div id="widgetmain" style=text-align:center;overflow-y:auto;overflow-x:hidden;width:700px;background-color:#transparent;">
-  <div id="rsswidget" style="height:600px;">
-    <iframe src="http://us1.rssfeedwidget.com/getrss.php?time=1612053790117&amp;x=https%3A%2F%2Fapi.adviceslip.com%2Fdaily_adviceslip.rss&amp;w=600&amp;h=600&amp;bc=333333&amp;bw=1&amp;bgc=transparent&amp;m=20&amp;it=true&amp;t=Powered by Advice Slip's API!&amp;tc=333333&amp;ts=15&amp;tb=transparent&amp;il=false&amp;lc=0000FF&amp;ls=14&amp;lb=false&amp;id=true&amp;dc=333333&amp;ds=14&amp;idt=true&amp;dtc=284F2D&amp;dts=12" border="0" hspace="0" vspace="0" frameborder="no" marginwidth="0" marginheight="0" style="border:0; padding:0; margin:0; width:600px; height:600px;" id="rssOutput">
-      Reading RSS Feed ...</iframe></div><div style="text-align:right;margin-bottom:0;" id="widgetbottom"></div></div>
+      <iframe src="https://feed.mikle.com/widget/v2/142163/?preloader-text=Loading..." height="713px" width="100%" class="fw-iframe" scrolling="no" frameborder="0"></iframe>
 </div></div></div>
 
 <!-- Footer -->
