--- a/SOCIALS.html
+++ b/SOCIALS.html
@@ -33,24 +33,24 @@
     <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">Daniel Klemens</p>
     <img src="media/dk_pic.jpg" alt="Daniel" style="width:25%">
     <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">Daniel was the web developer and web designer.</p>
-    <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">Contact @: <br>(703)609-1901<br> danielck@vt.edu<br> <a href="https://linktr.ee/kaneru" title="linktree" target="_blank" class="w3-hover-text-green">Linktree</a></p>
+    <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">Contact @ <br>(703)609-1901<br> danielck@vt.edu<br> <a href="https://linktr.ee/kaneru" title="linktree" target="_blank" class="w3-hover-text-green">Linktree</a></p>
   </article>
   <article class="w3-third">
     <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">George Qian</p>
-    <img src="media/carlton.gif" alt="George" style="width:50%">
-    <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">Contact @: <br>(917)402-6927<br> george19@vt.edu</p>
+    <img src="media/gq_pic.jpg" alt="George" style="width:37%">
+    <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">Contact @ <br>(917)402-6927<br> george19@vt.edu</p>
   </article>
   <article class="w3-third">
     <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">Meghna Banerjee</p>
     <img src="media/mb_pic.jpg" alt="Meghna" style="width:32%">
     <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">Meghna came up with our project idea.</p>
-    <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">Contact @: <br>(703)314-0742<br> bmeghna@vt.edu</p>
+    <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">Contact @ <br>(703)314-0742<br> bmeghna@vt.edu</p>
   </article>
   <article class="w3-third">
     <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">Sophia Campana</p>
     <img src="media/sc_pic.png" alt="Sophia" style="width:35%">
     <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">Sophia was the project coordinator.</p>
-    <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">Contact @: <br>(240)750-4320<br> sophiamc@vt.edu<br> linkedin.com/in/campsoph</p>
+    <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">Contact @ <br>(240)750-4320<br> sophiamc@vt.edu<br> linkedin.com/in/campsoph</p>
   </article>
 </section>
 
