--- a/AFFIRMATIONS.html
+++ b/AFFIRMATIONS.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <script src="https://www.w3schools.com/lib/w3.js"></script>
 
+<body>
 <!-- Navigation (Stays on Top) -->
 <div class="w3-top w3-bar w3-deep-purple">
   <a href="index.html" class="w3-bar-item w3-button">Home</a>
@@ -17,9 +18,9 @@
   <a href="RESOURCES.html" class="w3-bar-item w3-button">Resources</a>
   <a href="SOCIALS.html" class="w3-bar-item w3-button">Socials</a>
 </div>
-  
+
 <!-- Affirmation Container -->
-<div class="w3-container" id="help">
+<!-- <div class="w3-container" id="help">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-card w3-padding w3-wide">Affirmations</span></h5>
     <div class="w3-panel">
@@ -30,3 +31,39 @@
        document.write(x)
       </script>
     </div>
+  </div>
+</div> -->
+<div class="w3-sand w3-grayscale-min w3-large">
+
+<div class="w3-card-4">
+  <div class="w3-container w3-khaki" style="padding-top:40px">
+    <h2>Write an Affirmation</h2>
+  </div>
+  <form class="w3-container" action="/action_page.php">
+    <p>
+    <label class="w3-text-DarkSlateGray"><b>Name</b></label>
+    <input class="w3-input w3-border w3-sand" name="name" type="text"></p>
+    <p>
+    <label class="w3-text-DarkSlateGray"><b>Title</b></label>
+    <input class="w3-input w3-border w3-sand" name="title" type="text"></p>
+    <p>
+    <label class="w3-text-DarkSlateGray"><b>Affirmation</b></label>
+    <textarea class="w3-input w3-border w3-sand" style="resize:none"></textarea>
+    <p>
+    <button class="w3-btn w3-khaki">Submit</button></p>
+  </form>
+</div>
+</div>
+<!-- Footer -->
+<footer class="w3-container w3-padding-32 w3-center w3-deep-purple w3-xlarge">
+ <a href="https://twitter.com/kanerusoju"><i class="fa fa-twitter w3-hover-text-green"></i></a>
+ <p>
+ <p class="w3-medium">
+ Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a>
+ </p>
+ <p class="w3-medium">
+ Developed and Designed by <a href="https://linktr.ee/kaneru" target="_blank" class="w3-hover-text-green">Daniel Klemens</a></p>
+</footer>
+
+</body>
+</html>
