--- a/SOCIALS.html
+++ b/SOCIALS.html
@@ -43,7 +43,7 @@
   <article class="w3-third">
     <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">Meghna Banerjee</p>
     <img src="media/mb_pic.jpg" alt="Meghna" style="width:32%">
-    <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">Meghna came up with our project idea.</p>
+    <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">Meghna came up with our project idea and wrote our Devpost.</p>
     <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">Contact @ <br>(703)314-0742<br> bmeghna@vt.edu</p>
   </article>
   <article class="w3-third">
