Socials + Affirmations updated.

--- a/AFFIRMATIONS.html
+++ b/AFFIRMATIONS.html
@@ -35,6 +35,24 @@
 </div> -->
 <div class="w3-sand w3-grayscale-min w3-large">
 
+<!-- Examples Container -->
+<div class="w3-container" id="examples">
+  <div class="w3-content" style="max-width:700px">
+    <h5 class="w3-center w3-padding-64"><span class="w3-card w3-padding w3-wide">EXAMPLES</span></h5>
+    <div class="w3-panel w3-leftbar w3-khaki">
+      <p style="font-family:Garamond, serif; font-size: 20px; color:DarkSlateGray;"><strong>Daniel</strong></p>
+      <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;"><strong>Self-Worth</strong></p>
+      <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;"><i>“I am worthy of health, wealth, and love.”</i></p>
+    </div>
+    <div class="w3-panel w3-leftbar w3-khaki">
+      <p style="font-family:Garamond, serif; font-size: 20px; color:DarkSlateGray;"><strong>Sophia</strong></p>
+      <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;"><strong>Mindfulness</strong></p>
+      <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;"><i>“I am grateful for the opportunity to create today.”</i></p>
+    </div>
+  </div>
+</div>
+
+<!-- Affirmation Container -->
 <div class="w3-card-4">
   <div class="w3-container w3-khaki" style="padding-top:40px">
     <h2>Write an Affirmation</h2>
@@ -50,7 +68,7 @@
     <label class="w3-text-DarkSlateGray"><b>Affirmation</b></label>
     <textarea class="w3-input w3-border w3-sand" style="resize:none"></textarea>
     <p>
-    <button class="w3-btn w3-khaki">Submit</button></p>
+    <button class="w3-btn w3-khaki" type="submit">Submit</button></p>
   </form>
 </div>
 </div>
