--- a/SOCIALS.html
+++ b/SOCIALS.html
@@ -49,7 +49,7 @@
   <article class="w3-third">
     <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">Sophia Campana</p>
     <img src="media/sc_pic.png" alt="Sophia" style="width:35%">
-    <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">Sophia was the project coordinator.</p>
+    <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">Sophia was the project coordinator and produced the demo.</p>
     <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;">Contact @ <br>(240)750-4320<br> sophiamc@vt.edu<br> linkedin.com/in/campsoph</p>
   </article>
 </section>
