added image to affirmations

--- a/AFFIRMATIONS.html
+++ b/AFFIRMATIONS.html
@@ -18,6 +18,11 @@
   <a href="RESOURCES.html" class="w3-bar-item w3-button">Resources</a>
   <a href="SOCIALS.html" class="w3-bar-item w3-button">Socials</a>
 </div>
+  
+<!-- Image -->
+<section>
+  <img src="media/sunset.png" style="width:100%">
+</section>
 
 <!-- Affirmation Container -->
 <!-- <div class="w3-container" id="help">
