--- a/AFFIRMATIONS.html
+++ b/AFFIRMATIONS.html
@@ -44,7 +44,7 @@
 <div class="w3-container" id="examples">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-card w3-padding w3-wide">EXAMPLES</span></h5>
-    <img src="media/carlton.gif" alt="Carlton" style="padding-left:172px">
+    <img src="media/carlton.gif" alt="Carlton" style="padding-left:172px" class="w3-sepia-max">
     <div class="w3-panel w3-leftbar w3-khaki">
       <p style="font-family:Garamond, serif; font-size: 20px; color:DarkSlateGray;"><strong>Daniel</strong></p>
       <p style="font-family:Garamond, serif; font-size: 24px; color:DarkSlateGray;"><strong>Self-Worth</strong></p>
