fixed TOTD footer

--- a/TOTD.html
+++ b/TOTD.html
@@ -28,7 +28,7 @@
     <div class="w3-panel">
       <iframe src="https://feed.mikle.com/widget/v2/142163/?preloader-text=Loading..." height="713px" width="100%" class="fw-iframe" scrolling="no" frameborder="0"></iframe>
 </div></div></div>
-
+</div>
 <!-- Footer -->
 <footer class="w3-container w3-padding-32 w3-center w3-deep-purple w3-xlarge">
  <a href="https://twitter.com/kanerusoju"><i class="fa fa-twitter w3-hover-text-green"></i></a>
